--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 temp_repo/
+static/css/
+static/images/backgrounds/help.txt
+static/images/elements/help.txt
+static/images/help.txt
+static/images/textures/help.txt
