改进静态图片处理：直接将图片放在static/images目录下，不使用Git LFS

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ static/images/backgrounds/help.txt
 static/images/elements/help.txt
 static/images/help.txt
 static/images/textures/help.txt
+tmp_images/
