--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     { "src": "static/**", "use": "@vercel/static" }
   ],
   "routes": [
+    { "handle": "filesystem" },
     { "src": "/static/(.*)", "dest": "/static/$1" },
     { "src": "/(.*)", "dest": "/api/index.py" }
   ]
