--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,1 @@
-{
-  "version": 2,
-  "builds": [
-    { "src": "api/index.py", "use": "@vercel/python" },
-    { "src": "static/**", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/(.*)", "dest": "/api/index.py" }
-  ]
-}
+{"version":2,"builds":[{"src":"api/index.py","use":"@vercel/python"}],"routes":[{"src":"/(.*)", "dest":"api/index.py"}]}
